<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:fitsSystemWindows="true"
    android:padding="16dp">

    <TextView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:background="@drawable/card"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Text"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="36dp"
        android:alpha="0.75"
        android:fontFamily="@font/doppio_one_regular"
        android:gravity="end|center_vertical"
        android:text=""
        android:textColor="#55423866"
        android:textSize="20sp"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="240dp"
        android:layout_marginEnd="36dp"
        android:fontFamily="@font/doppio_one_regular"
        android:gravity="end|center_vertical"
        android:text=""
        android:textColor="@color/darkBrown"
        android:textSize="36sp"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/divider"
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_marginTop="330dp"
        android:background="@drawable/rectangle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- الصف الأول -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/Ac"
        style="@style/circleButton.Normal"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="360dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/ac"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/back"
        style="@style/circleButton.Normal"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="360dp"
        android:contentDescription="@null"
        android:src="@drawable/arrow_left_02"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/divide"
        style="@style/circleButton.Operator"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="360dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/divide"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/div"
        style="@style/circleButton.Operator"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="258dp"
        android:layout_marginTop="360dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/div"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- الصف الثاني -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/seven"
        style="@style/circleButton.Normal"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="446dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/seven"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/eight"
        style="@style/circleButton.Normal"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="446dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/eight"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nine"
        style="@style/circleButton.Normal"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="446dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/nine"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/mul"
        style="@style/circleButton.Operator"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="258dp"
        android:layout_marginTop="446dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/mul"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- الصف الثالث -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/four"
        style="@style/circleButton.Normal"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="532dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/four"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/five"
        style="@style/circleButton.Normal"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="532dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/five"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/six"
        style="@style/circleButton.Normal"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="532dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/six"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add"
        style="@style/circleButton.Operator"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="258dp"
        android:layout_marginTop="532dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/add"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- الصف الرابع -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/one"
        style="@style/circleButton.Normal"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="618dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/one"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/two"
        style="@style/circleButton.Normal"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="618dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/two"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/three"
        style="@style/circleButton.Normal"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="618dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/three"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sub"
        style="@style/circleButton.Operator"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="258dp"
        android:layout_marginTop="618dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/sub"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- الصف الخامس -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plusMinus"
        style="@style/circleButton.Normal"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="0dp"
        android:layout_marginTop="704dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/plas_minus"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/zero"
        style="@style/circleButton.Normal"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="86dp"
        android:layout_marginTop="704dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/zero"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dot"
        style="@style/circleButton.Normal"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="704dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/dot"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/equals"
        style="@style/circleButton.Operator"
        android:layout_width="78dp"
        android:layout_height="78dp"
        android:layout_marginStart="258dp"
        android:layout_marginTop="704dp"
        android:fontFamily="@font/doppio_one_regular"
        android:text="@string/equals"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>